--- a/gwt-nio/pom.xml
+++ b/gwt-nio/pom.xml
@@ -41,7 +41,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <elemental2.version>1.0.0-RC1</elemental2.version>
+    <elemental2.version>1.0.0</elemental2.version>
 
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
