--- a/gwt-nio-gwt2-tests/pom.xml
+++ b/gwt-nio-gwt2-tests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.treblereel.gwt.nio</groupId>
         <artifactId>gwt-nio-parent</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <artifactId>gwt-nio-gwt2-tests</artifactId>
     <packaging>gwt-lib</packaging>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.treblereel.gwt.nio</groupId>
             <artifactId>gwt-nio</artifactId>
-            <version>1.0</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
