--- a/gwt-nio-gwt2-tests/pom.xml
+++ b/gwt-nio-gwt2-tests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.treblereel.gwt.nio</groupId>
         <artifactId>gwt-nio-parent</artifactId>
-        <version>1.0</version>
+        <version>0.9-SNAPSHOT</version>
     </parent>
     <artifactId>gwt-nio-gwt2-tests</artifactId>
     <packaging>gwt-lib</packaging>
@@ -30,8 +30,8 @@
         <vertispan.j2cl.repo.url>https://repo.vertispan.com/j2cl/</vertispan.j2cl.repo.url>
         <google.snapshot.repo.url>https://oss.sonatype.org/content/repositories/google-snapshots/</google.snapshot.repo.url>
 
-        <elemental2.version>1.0.0</elemental2.version>
-        <gwt.version>2.9.0</gwt.version>
+        <elemental2.version>1.0.0-RC1</elemental2.version>
+        <gwt.version>2.8.2</gwt.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.treblereel.gwt.nio</groupId>
             <artifactId>gwt-nio</artifactId>
-            <version>1.0</version>
+            <version>0.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
