--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>org.treblereel.gwt.nio</groupId>
   <artifactId>gwt-nio-parent</artifactId>
 
-  <version>1.0</version>
+  <version>0.9-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
