--- a/gwt-nio/pom.xml
+++ b/gwt-nio/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.treblereel.gwt.nio</groupId>
   <artifactId>gwt-nio</artifactId>
-  <version>0.9-SNAPSHOT</version>
+  <version>0.9</version>
   <packaging>jar</packaging>
 
   <name>GWT NIO</name>
@@ -34,6 +34,7 @@
     <connection>scm:git:git://github.com/treblereel/gwt-nio.git</connection>
     <developerConnection>scm:git:ssh://github.com/treblereel/gwt-nio.git</developerConnection>
     <url>https://github.com/treblereel/gwt-nio/tree/master</url>
+    <tag>gwt-nio-0.9</tag>
   </scm>
 
   <inceptionYear>2020</inceptionYear>
