--- a/gwt-nio-j2cl-tests/pom.xml
+++ b/gwt-nio-j2cl-tests/pom.xml
@@ -39,19 +39,19 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <maven.compiler.plugin>3.8.0</maven.compiler.plugin>
     <maven.deploy.plugin>3.0.0-M1</maven.deploy.plugin>
     <maven.findbugs.plugin>3.0.5</maven.findbugs.plugin>
     <maven.install.plugin>3.0.0-M1</maven.install.plugin>
     <maven.jar.plugin>3.1.2</maven.jar.plugin>
-    <maven.j2cl.plugin>0.22.0</maven.j2cl.plugin>
+    <maven.j2cl.plugin>0.23-SNAPSHOT</maven.j2cl.plugin>
     <maven.licence.plugin>3.0</maven.licence.plugin>
     <maven.surfire.plugin>3.0.0-M1</maven.surfire.plugin>
 
-    <j2cl.version>v20230718-1</j2cl.version>
+    <j2cl.version>v20240622-1</j2cl.version>
   </properties>
 
   <dependencies>
