--- a/gwt-nio-j2cl-tests/pom.xml
+++ b/gwt-nio-j2cl-tests/pom.xml
@@ -47,11 +47,11 @@
     <maven.findbugs.plugin>3.0.5</maven.findbugs.plugin>
     <maven.install.plugin>3.0.0-M1</maven.install.plugin>
     <maven.jar.plugin>3.1.2</maven.jar.plugin>
-    <maven.j2cl.plugin>0.23-SNAPSHOT</maven.j2cl.plugin>
+    <maven.j2cl.plugin>0.23.1</maven.j2cl.plugin>
     <maven.licence.plugin>3.0</maven.licence.plugin>
     <maven.surfire.plugin>3.0.0-M1</maven.surfire.plugin>
 
-    <j2cl.version>v20240622-1</j2cl.version>
+    <j2cl.version>v20240622-2</j2cl.version>
   </properties>
 
   <dependencies>
@@ -61,19 +61,19 @@
       <version>1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>com.vertispan.j2cl</groupId>
+      <groupId>org.kie.j2cl.tools</groupId>
       <artifactId>junit-annotations</artifactId>
       <version>${j2cl.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.vertispan.j2cl</groupId>
+      <groupId>org.kie.j2cl.tools</groupId>
       <artifactId>gwttestcase-emul</artifactId>
       <version>${j2cl.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.vertispan.j2cl</groupId>
+      <groupId>org.kie.j2cl.tools</groupId>
       <artifactId>junit-emul</artifactId>
       <version>${j2cl.version}</version>
       <scope>test</scope>
@@ -96,7 +96,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.vertispan.j2cl</groupId>
+        <groupId>org.kie.j2cl.tools</groupId>
         <artifactId>j2cl-maven-plugin</artifactId>
         <version>${maven.j2cl.plugin}</version>
         <configuration>
