--- a/gwt-nio/pom.xml
+++ b/gwt-nio/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.treblereel.gwt.nio</groupId>
   <artifactId>gwt-nio</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.3</version>
   <packaging>jar</packaging>
 
   <name>GWT NIO</name>
