--- a/gwt-nio-gwt2-tests/pom.xml
+++ b/gwt-nio-gwt2-tests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.treblereel.gwt.nio</groupId>
         <artifactId>gwt-nio-parent</artifactId>
-        <version>1.3</version>
+        <version>1.4</version>
     </parent>
     <artifactId>gwt-nio-gwt2-tests</artifactId>
     <packaging>gwt-lib</packaging>
@@ -30,25 +30,25 @@
         <vertispan.j2cl.repo.url>https://repo.vertispan.com/j2cl/</vertispan.j2cl.repo.url>
         <google.snapshot.repo.url>https://oss.sonatype.org/content/repositories/google-snapshots/</google.snapshot.repo.url>
 
-        <elemental2.version>1.1.0</elemental2.version>
-        <gwt.version>2.10.0</gwt.version>
-        <junit.version>4.12</junit.version>
+        <elemental2.version>1.2.3</elemental2.version>
+        <gwt.version>2.12.0</gwt.version>
+        <junit.version>4.13.1</junit.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.treblereel.gwt.nio</groupId>
             <artifactId>gwt-nio</artifactId>
-            <version>1.3</version>
+            <version>1.4</version>
         </dependency>
         <dependency>
-            <groupId>com.google.gwt</groupId>
+            <groupId>org.gwtproject</groupId>
             <artifactId>gwt-user</artifactId>
             <version>${gwt.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.gwt</groupId>
+            <groupId>org.gwtproject</groupId>
             <artifactId>gwt-dev</artifactId>
             <version>${gwt.version}</version>
             <scope>test</scope>
